# ps0

./: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: App.tsx  _App.tsx  _main.tsx  index.d.ts  main.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: Cargo.toml  main.rs
src-tauri/src/actions/: controllers.rs  mod.rs
src-tauri/src/actions/apollo/: cache.rs  mod.rs  save.rs
src-tauri/src/actions/apollo/add/: index.rs
src-tauri/src/actions/apollo/check/: index.rs  types.rs
src-tauri/src/actions/apollo/confirm/: index.rs
src-tauri/src/actions/apollo/create/: index.rs  types.rs
src-tauri/src/actions/apollo/delete/: index.rs
src-tauri/src/actions/apollo/demine/: index.rs  types.rs
src-tauri/src/actions/apollo/domain/: index.rs
src-tauri/src/actions/apollo/get/: index.rs
src-tauri/src/actions/apollo/lib/: index.rs  mod.rs  util.rs
src-tauri/src/actions/apollo/login/: index.rs  types.rs
src-tauri/src/actions/apollo/scrape/: index.rs  mod.rs  types.rs
src-tauri/src/actions/apollo/update/: index.rs
src-tauri/src/libs/: cache.rs  imap.rs  mod.rs  scraper.rs
src-tauri/src/libs/db/: entity.rs  index.rs  mod.rs
src-tauri/src/libs/db/accounts/: mod.rs  types.rs
src-tauri/src/libs/db/domain/: types.rs
src-tauri/src/libs/db/metadata/: types.rs
src-tauri/src/libs/db/proxy/: mod.rs  types.rs
src-tauri/src/libs/db/records/: types.rs
src-tauri/src/libs/forwarder/: index.rs  types.rs
src-tauri/src/libs/taskqueue/: index.rs  types.rs
src/assets/: main.css
src/components/: Prompt.tsx  Sidebar.tsx
src/components/AccountField/: index.tsx
src/components/AccountField/AccountForms/: index.tsx
src/components/AccountField/AccountPopup/: Actions.tsx  Update.tsx  index.tsx
src/components/AccountField/AccountTable/: Dropdown.tsx  index.tsx
src/components/DomainField/: _DomainField.tsx  _DomainPopup.tsx  index.tsx
src/components/DomainField/DomainForm/: index.tsx
src/components/DomainField/DomainPopup/: DomainActions.tsx  UpdateDomain.tsx  index.tsx
src/components/DomainField/DomainTable/: DomainDropdownTable.tsx  index.tsx
src/components/MetadataRecords/: Options.tsx  index.tsx
src/components/Proxy/: ProxyField.tsx  ProxyPopup.tsx
src/components/ScrapeField/: Diagram.tsx  index.tsx
src/components/TaskQueueBar/: TaskView.tsx  TaskViewPopup.tsx
src/core/: channels.ts  mockdata.ts  util.ts
src/core/io/: apollo.ts  forks.ts  prompt.ts  scrapequeue.ts  taskqueue.ts
src/core/state/: account.ts  domain.ts  fork.ts  index.ts  metadata.ts  prompt.ts  scrapeQueue.ts  taskQueue.ts
(+9 files in other folders)
