[package]
name = "forward-scraper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-sidecar", "shell-open", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chromiumoxide = { version = "0.5.7", default-features = false, features = [
    "async-std-runtime",
    "_fetcher-rustls-async-std",
] }
futures = "0.3.30"
anyhow = "1.0.81"
uuid = { version = "1.6.1", features = ["v4", "serde", "fast-rng"] }
async-std = {version="1.12.0", features= ["tokio1"] }
ts-rs = { version = "8.1.0", features = ["uuid-impl"] }
once_cell = "1.19.0"
rand_pwd = "1.1.3"
regex = "1.9.3"
simple_password_generator = "1.0.1"
fake = "2.9.2"
async-imap = "0.9.7"
async-native-tls = "0.5.0"
mailparse = "0.15.0"
url-build-parse = "12.1.0"
reqwest = { version="0.12.4", features = ["json"] }
surrealdb = {version = "1.5.1", features = ["kv-rocksdb"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
get-port = "4.0.0"
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-proxy = "0.9.1"
headers = "0.3.9"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
