[package]
name = "forward-scraper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chromiumoxide = { version = "0.5.7", default-features = false, features = [
    "async-std-runtime",
    "_fetcher-rustls-async-std",
] }
futures = "0.3.30"
anyhow = "1.0.81"
uuid = { version = "1.6.1", features = ["v4", "serde", "fast-rng"] }
lazy_static = "1.4.0"
mut_static = "5.0.0"
async-std = "1.12.0"
polodb_core = "4.4.1"
ts-rs = { version = "8.1.0", features = ["uuid-impl"] }
static_init = "1.0.3"
once_cell = "1.19.0"
imap = "2.4.1"
native-tls = "0.2.11"
imap-proto = "0.10.2"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
